# libxtc

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  AUTHORS  LICENSE  PLAN.md  README.md  flake.nix  meson.build
.forgejo/workflows/: ci.yml  pages.yml
.github/workflows/: ci.yml  pages.yml
bench/: bench_disk.c  bench_million_tasks.c  bench_net.c  bench_uring_disk.c
bench/audit/: AUDIT_SUMMARY.md  Makefile  false_sharing_mpsc.c  false_sharing_proc.c
bench/conformance/: README.md  plot.py  run.sh
bench/redis_compat/: Makefile  README.md  bench.c
bench/rexis_compat/: Makefile  README.md  bench.c
bench/sqlxtc/: RESULTS.md  saturate.sh  saturate_client.py
docs/: API.md  ARCHITECTURE.md  Doxyfile  KNOWN_ISSUES.md  M16_PG_ADAPTER.md  M17_CONFORMANCE.md  M17_RESULTS_FORMAT.md  M4.5_DEFERRED.md  MAN_TODO.md  M_AIX_KVM.md  M_BEAM_LESSONS.md  M_BUILDFARM.md  M_CI.md  M_CRITICAL_REVIEW.md  M_LIBC_MATRIX.md  M_LIBXTC_PG_BOUNDARY.md  M_LRLOCK_COW.md  M_MACOS_KVM.md  M_MULTI_HEAD_RECV.md  M_PORT.md  M_SQLXTC_GREENFIELD.md  M_SQLXTC_HARDFORK.md  M_SQLXTC_SCALEOUT.md  M_SQLXTC_STORAGE.md  M_SQLXTC_XTC_GAPS.md  M_TLS.md  M_TLS_MATRIX.md  M_WINDOWS_MATRIX.md  PUBLISHING.md  _config.yml  abi-stability.md  getting-started.md  index.md  locks.md
docs/adr/: 0001-test-first-claim-driven.md  0002-hegel-pbt-first-class.md
examples/: 01_hello_async.c  02_proc_pingpong.c  03_supervised_app.c  04_lockmgr_demo.c  README.md
examples/05_redis/: Makefile  README.md  cmd.c  cmd.h  conn.c  conn.h  db.c  db.h  expire.c  main.c  metrics.c  proto.c  proto.h
examples/05_rexis/: Makefile  README.md  bitcask.c  bitcask.h  cmd.c  cmd.h  conn.c  conn.h  db.c  db.h  expire.c  main.c  metrics.c  proto.c  proto.h  test_bitcask  test_bitcask.c  test_db_persist.c  test_metrics.c
examples/06_sqlxtc/: .gitignore  DESIGN.md  Makefile  PROTOCOL.md  README.md  btnode.c  btnode.h  btree.c  btree.h  bufmgr.c  bufmgr.h  conn.c  conn.h  db.c  db.h  engine.c  engine.h  main.c  mem.c  mem.h  metrics.c  mutex.c  mutex.h  pcache.c  pcache.h  pcache_xtc.c  pcache_xtc.h  quack.c  quack.h  sql_parse.c  sql_parse.h  sql_parse_drv.c  sql_parse_lime.h  sqlxtc_mutex.c  sqlxtc_pcache.c  sqlxtc_pcache.h  sqlxtc_vfs.c  sqlxtc_vfs.h  test_btnode.c  test_btree.c  (+21 more)
examples/07_kaka/: Makefile  PROTOCOL.md  README.md  broker.c  broker.h  frame.c  frame.h  group.c  group.h  main.c  metrics.c  metrics.h  partition.c  partition.h  test_broker.c  test_frame.c  test_group  test_group.c  test_partition.c
examples/sqlxtc/: Makefile  README.md  conn.c  conn.h  db.c  db.h  main.c  metrics.c  pgwire.h  quack.c  quack.h  sql_grammar.lime  sql_parse.c  sql_parse.h  sql_parse_drv.c  sql_parse_lime.h  xtc_mutex.c
man/man3/: __os_alloc.3  __os_atomic.3  __os_mutex.3  __os_thread.3  __os_time.3  __os_tls.3  xtc_alloc_audit.3  xtc_app.3  xtc_async.3  xtc_cfg.3  xtc_chan.3  xtc_exec.3  xtc_inject.3  xtc_io.3  xtc_lockmgr.3  xtc_log.3  xtc_loop.3  xtc_lrlock.3  xtc_lwlock.3  xtc_mctx.3  xtc_net.3  xtc_pdict.3  xtc_proc.3  xtc_rcu.3  xtc_reg.3  xtc_res.3  xtc_slab.3  xtc_stats.3  xtc_strerror.3  xtc_supervisor.3  xtc_svr.3  xtc_sync.3  xtc_tls.3  xtc_version_components.3  xtc_version_string.3
man/man7/: xtc-abi-stability.7  xtc-build.7  xtc.7
scripts/: ascii_sweep.py  check-tailcalls.sh  copyright_update.py
src/: xtc_strerror.c  xtc_version.c
src/evt/: coro_fctx.c  coro_uctx.c  coro_winfiber.c  exec.c  loop.c  task.c  timer.c
src/inc/: coro_int.h  deque.h  evt_ext.h  io_ext.h  io_int.h  loop_int.h  orc_ext.h  os_alloc.h  os_atomic.h  os_cpu.h  os_ext.h  os_thread.h  os_time.h  ptc_ext.h  xtc.h  xtc_alloc_audit.h  xtc_app.h  xtc_async.h  xtc_blocking.h  xtc_cfg.h  xtc_chan.h  xtc_exec.h  xtc_ext.h  xtc_inject.h  xtc_int.h  xtc_io.h  xtc_lockmgr.h  xtc_log.h  xtc_loop.h  (+16 more)
(+212 files in other folders)
